# agentfm-core

./: .gitignore  AUDIT-2026-07-06.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v1.3.0.md  SECURITY.md  electron-builder.yml  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.web.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: feature_request.md  issue-template.md
.github/workflows/: desktop-windows-build.yml  python-sdk-publish.yml  python-sdk-test.yml
agent-example/image-generator/: README.md  flux_deploy.py  requirements.txt
agent-example/image-generator/agent/: Dockerfile  run.py
agent-example/sick-leave-generator/agent/: Dockerfile  requirements.txt  run.py
agentfm-desktop/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
agentfm-desktop/electron/: backend-manager.ts  ipc.ts  logger.ts  main.ts  preload.ts  store.ts  validate.ts
agentfm-desktop/scripts/: adhoc-sign.cjs  brand-dev-bundle.mjs  build-binaries.sh  dev.sh
agentfm-desktop/shared/: ipc.ts
agentfm-desktop/src/: App.tsx  main.tsx  vite-env.d.ts
agentfm-desktop/src/components/: AgentCard.tsx  BackendDownOverlay.tsx  (+18 more)
agentfm-desktop/tests/: driver.mjs
agentfm-go/: Makefile  go.mod  go.sum  install.sh
agentfm-go/manifests/: trusted-agents.json
agentfm-go/scripts/: release.sh
agentfm-go/test/: README.md
agentfm-python/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
agentfm-python/examples/: 01_quickstart_and_streaming.py  02_batch_scatter_gather.py  03_async_with_webhook.py  04_openai_drop_in.py  05_local_mesh_gateway.py  06_list_and_pick_by_peer_id.py
agentfm-python/examples/playground_server/: README.md
agentfm-python/src/agentfm/: __init__.py  _compat.py  _shared.py  _transport.py  _warnings.py  artifacts.py  async_client.py  cli.py  client.py  crypto.py  daemon.py  exceptions.py  models.py  peers.py  reputation.py  streaming.py  webhook.py
agentfm-python/src/agentfm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agentfm-python/src/agentfm/_internal/: resource.py
agentfm-python/src/agentfm/openai/: __init__.py  _namespaces.py  models.py
agentfm-python/test/: crypto_test.py  mov.py  run.py  run_batch.py  test_daemon.py
agentfm-python/tests/: conftest.py
agentfm-python/tests/integration/: test_artifact_attribution.py  test_async_client.py  test_retry_policy.py  test_scatter.py  test_sync_client.py  test_thread_safety.py
agentfm-python/tests/unit/: test_artifacts.py  test_auth.py  test_crypto.py  test_daemon.py  test_exceptions.py  test_models.py  test_openai_models.py  test_overloads.py  test_parity.py  test_peers.py  test_reputation.py  test_streaming.py  test_webhook.py  test_with_options.py
agentfm-web/: README.md  index.html  playground.html
agentfm-web/css/: playground.css  style.css
agentfm-web/js/: main.js  mesh.js  playground.js  scroll.js
docs/: DESKTOP.md  architecture.md  auth.md  cli.md  development.md  http-api.md  install.md  observability.md  openai.md  private-swarms.md  security.md  trust.md  worker.md
electron/: backend-manager.ts  ipc.ts  preload.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: mac-release-zips.sh  package.sh  seticon.swift
src/: App.tsx  main.tsx
src/components/: AgentCard.tsx  BackendDownOverlay.tsx  CapabilityBadge.tsx  DispatchBadge.tsx  DispatchDrawer.tsx  EmptyRadar.tsx  EmptyState.tsx  EquivocatorBadge.tsx  FeedbackModal.tsx  HonestyBadge.tsx  RadarSkeleton.tsx  SettingsFooter.tsx  SettingsSheet.tsx  Shell.tsx  Sidebar.tsx  StreamingView.tsx  TabStrip.tsx  TopBar.tsx  WelcomeModal.tsx
src/hooks/: useChat.ts  useDispatch.ts  useEventStream.ts  useGlobalShortcuts.ts  useWorkerHistory.ts
src/lib/: api.ts  displayName.ts  metricsDerive.ts  metricsStore.ts  motion.ts  peerIdentityCache.ts  projectMigration.ts  projectStore.ts  promParse.ts  query.ts  sessions.ts  store.ts
src/routes/: Activity.tsx  Assets.tsx  Chat.tsx  Dashboard.tsx  PeerView.tsx  Radar.tsx  Settings.tsx  Status.tsx
src/styles/: globals.css  tokens.css
src/types/: api.ts  chat.ts  project.ts
tests/e2e/: connect-flow.spec.ts  dashboard.spec.ts  happy-path.spec.ts  nav-stress.spec.ts  projects.spec.ts  tabstrip.spec.ts  visual-smoke.spec.ts
tests/unit/: api.test.ts  backend-manager.test.ts  metricsDerive.test.ts  metricsStore.test.ts  motion.test.ts  primitives.test.tsx  projectMigration.test.ts  projectStore.test.ts  promParse.test.ts  sparkLine.test.tsx
(+344 files in other folders)
