[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agentfm"
description = "Official Python SDK for the AgentFM peer-to-peer compute mesh."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "AgentFM contributors", email = "hello@agentfm.network" },
]
keywords = [
    "agentfm",
    "p2p",
    "libp2p",
    "ai-agents",
    "openai",
    "compute-mesh",
    "decentralized",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
cli = [
    "rich>=13.7",
]
dev = [
    "agentfm[cli]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://agentfm.net"
Repository = "https://github.com/Agent-FM/agentfm-core"
Issues = "https://github.com/Agent-FM/agentfm-core/issues"
Changelog = "https://github.com/Agent-FM/agentfm-core/blob/main/agentfm-python/CHANGELOG.md"

[project.scripts]
agentfm-py = "agentfm.cli:main"

[tool.hatch.version]
path = "src/agentfm/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/agentfm",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentfm"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default argument (httpx idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts in tests are fine
# `List` (capital L) used in client.py / async_client.py to disambiguate from `def list(...)` method
"src/agentfm/client.py" = ["UP006"]
"src/agentfm/async_client.py" = ["UP006"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that exercise the full client against a mocked gateway",
    "slow: tests that take more than a second",
]

[tool.coverage.run]
source = ["src/agentfm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
